yaml/minio-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: minio
  labels:
    app.kubernetes.io/name: minio
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: minio
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: minio
    spec:
      containers:
      - command:
        - /bin/sh
        - -c
        - mkdir -p /storage/bucket && mkdir -p /storage/thanos && mkdir -p /storage/default && /opt/bin/minio server /storage --console-address ":9091"
        image:  quay.io/minio/minio:RELEASE.2022-03-22T02-05-10Z
        name: minio
        ports:
        - containerPort: 9000
          protocol: TCP
        - containerPort: 9091
          protocol: TCP
        volumeMounts:
        - mountPath: /storage
          name: storage
      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: minio
