yaml/minio-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: minio
spec:
  ports:
  - port: 9000
    protocol: TCP
    targetPort: 9000
    name: api
  - port: 9091
    protocol: TCP
    targetPort: 9091
    name: webui
  selector:
    app.kubernetes.io/name: minio
  type: ClusterIP
